--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Amanda Stent
+name: Josie O'Harrow
 
 # Short bio or description (displayed in the header)
 description: Summer 2020 DREU Project
