--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Josie O'Harrow
 description: Summer 2020 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://josieoharrow.github.io/images/Josie-Photo.jpg
+avatar: https://josieoharrow.github.io/images/Josie-Photo.JPG
 
 #
 # Flags below are optional
