--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Josie O'Harrow
+name: Jo O'Harrow
 
 # Short bio or description (displayed in the header)
-description: Summer 2020 DREU Project
+description: Personal Blog of Jo O'Harrow
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://josieoharrow.github.io/images/Josie-Photo.JPG
