--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jo O'Harrow
 description: Personal Blog of Jo O'Harrow
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://josieoharrow.github.io/images/Josie-Photo.JPG
+avatar: https://josieoharrow.github.io/images/Portrait.JPG
 
 #
 # Flags below are optional
